ui design refactor

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -72,7 +72,7 @@
 {% block scripts %}
 <script>
     const map = L.map('overview-map').setView([40.95, 29.2], 11);
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
         attribution: '&copy; OpenStreetMap, &copy; CARTO'
     }).addTo(map);
 
