--- a/web/templates/routes.html
+++ b/web/templates/routes.html
@@ -310,7 +310,7 @@
     // Initialize map
     function initMap() {
         routeMap = L.map('route-map').setView([40.95, 29.2], 11);
-        L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
             attribution: '&copy; OpenStreetMap, &copy; CARTO'
         }).addTo(routeMap);
 
