--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -32,7 +32,7 @@
                 <div class="sidebar-brand">
                     <a href="/" class="logo">
                         <span class="logo-mark">RE</span>
-                        <span class="logo-text">{{ t['app_title'] }}</span>
+                        <span class="logo-text">Routing Engine</span>
                     </a>
                     <button class="sidebar-close d-xl-none" id="sidebarCollapse" type="button">
                         <i class="ti ti-x"></i>
@@ -41,7 +41,6 @@
 
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
-                        <li class="nav-small-cap">Main</li>
                         <li class="sidebar-item">
                             <a href="/" class="sidebar-link {% if request.endpoint == 'dashboard' %}active{% endif %}">
                                 <span class="aside-icon">
